# LP_MERCARI_MSMediNow_T2

./: .gitignore  Dockerfile  Pipfile  README.md  gunicorn.conf.py  manage.py  pyproject.toml
hms/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
hms/management/commands/: setup.py
hms/migrations/: 0001_initial.py
mercari_api/: asgi.py  settings.py  urls.py  wsgi.py
services/django/: deployment.yaml
services/elasticache/: service.yaml
services/postgres/: deployment.yaml
services/rds/: service.yaml
services/redis/: deployment.yaml
